# steps-excel

./: .gitignore  expense.txt  get_sheet_name.py  income.txt  justfile  pyproject.toml  release.py  req.txt  requirements.txt  start.bat
backend/: app.py  comis.py  comissss.md  config.py  config.toml  distribute.py  example.config.toml  filter.py  inn.py  make_numeric.py  make_title.py  pyproject.toml  samle.py  test.ipynb
